test/sema/negative/subtyping2.output
subtyping2.impala:2 col 6: error: Wrong argument type; expected float but found int32
